# todo-api-rust

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2022-02-23-102400_todo/: up.sql
src/: main.rs  models.rs  schema.rs
src/todo/: mod.rs  todo_create.rs  todo_update.rs  todos_get.rs
